@@ -5,11 +5,10 @@ import com.alkemy.ong.data.repositories.SlidesRepository;
 import com.alkemy.ong.domain.exceptions.ResourceNotFoundException;
 import com.alkemy.ong.domain.slides.Slides;
 import com.alkemy.ong.domain.slides.SlidesGateway;
+import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-
-import static java.util.stream.Collectors.toList;
 
 @Component
 public class DefaultSlidesGateway implements SlidesGateway {
@@ -22,16 +21,16 @@ public class DefaultSlidesGateway implements SlidesGateway {
 
     @Override
     public List<Slides> findAll() {
-        List<SlidesEntity> slidesEntity = slidesRepository.findAll();
-        return slidesEntity.stream()
-                .map(s -> toModel(s))
-                .collect(toList());
+        List<SlidesEntity> slidesEntityList = slidesRepository.findAll();
+        return slidesEntityList.stream()
+                .map(slides -> toModel(slides))
+                .toList();
     }
 
     @Override
-    public Slides findById(Long idSlides) {
-        SlidesEntity entity = slidesRepository.findById(idSlides)
-                .orElseThrow(()-> new ResourceNotFoundException("No slide with id: " + idSlides + " exists."));
+    public Slides findById(Long id) {
+        SlidesEntity entity = slidesRepository.findById(id)
+                .orElseThrow(()-> new ResourceNotFoundException("No slide with id: " + id + " exists."));
         return toModel(entity);
     }
 
