@@ -9,8 +9,8 @@ import lombok.Data;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
+import java.util.Collections;
 import java.util.List;
-import static java.util.stream.Collectors.toList;
 
 @RestController
 @RequestMapping("/slides")
@@ -24,10 +24,11 @@ public class SlidesController {
 
     @GetMapping
     public ResponseEntity<List<SlidesSimpleDTO>> getAllSlides(){
-        List<Slides> slidesList =slidesService.findAll();
-        return ResponseEntity.ok(slidesList.stream()
-                .map(slide -> toDto(slide))
-                .collect(toList()));
+        List<Slides> slidesList = slidesService.findAll();
+        return ResponseEntity.ok(slidesList
+                .stream()
+                .map(s -> toDto(s))
+                .toList());
     }
 
     @GetMapping("/{id}")
